# Fast-SAM3D

./: Dockerfile  README.md  docker-compose.yml  infer.sh  pyproject.toml
checkpoints/hf/: pipeline.yaml
doc/: Setup.md
fastsam3d_objects/: __init__.py
fastsam3d_objects/model/: io.py
fastsam3d_objects/model/backbone/dit/embedder/: embedder_fuser.py
fastsam3d_objects/model/backbone/generator/flow_matching/: model.py  solver.py
fastsam3d_objects/model/backbone/generator/shortcut/: debug.py  model.py
fastsam3d_objects/model/backbone/tdfy_dit/models/: mot_sparse_structure_flow.py
fastsam3d_objects/model/backbone/tdfy_dit/modules/attention/: modules.py
fastsam3d_objects/model/backbone/tdfy_dit/modules/sparse/transformer/: modulated.py
fastsam3d_objects/pipeline/: inference_pipeline.py  inference_pipeline_pointmap.py  inference_utils.py  preprocess_utils.py
fastsam3d_objects/pipeline/utils/: pointmap.py
fastsam3d_objects/utils/visualization/: image_mesh.py  scene_visualizer.py
notebook/: demo.py  infer.py  infer_scene.py  infer_scene.sh  inference.py  segment_objects.py
sam3d_objects/f3c_slat_end/: __init__.py
sam3d_objects/fft/: __init__.py
sam3d_objects/model/backbone/dit/embedder/: dino.py
sam3d_objects/model/backbone/generator/flow_matching/: model.py  solver.py
sam3d_objects/model/backbone/generator/shortcut/: model.py
sam3d_objects/model/backbone/tdfy_dit/modules/sparse/transformer/: modulated.py
sam3d_objects/pipeline/: inference_pipeline.py
